--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "antd": "^4.4.2",
     "axios": "^0.19.2",
     "clsx": "latest",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
     "next": "latest",
     "node-sass": "^4.14.1",
     "prop-types": "latest",
@@ -16,7 +18,7 @@
     "react-dom": "latest"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
